# ADLCV

./: .gitignore  main.py  pyproject.toml  sweep_results.txt
adlcv-ex-1/: test_implementation.py  text_classification.py  transformer.py
adlcv-ex-2/: imageclassification.py  playground.py  visualize.py  vit.py
adlcv-ex-2/models/: model.pth
adlcv-ex-3/: gpt.py  test.py  train.py
adlcv-ex-4/: ddpm.py  ddpm_train.py  playground.py
adlcv-ex-4/dataset/: sprites_dataset.py
